App: Clean up locale loading a LOT.
This reduces some complex interactions :P