@@ -1,59 +1,38 @@
 package co.casterlabs.caffeinated.app.locale;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Supplier;
 
 import org.jetbrains.annotations.Nullable;
 
 import co.casterlabs.commons.localization.LocaleProvider;
 import lombok.NonNull;
-import lombok.SneakyThrows;
 import xyz.e3ndr.fastloggingframework.logging.FastLogger;
 import xyz.e3ndr.fastloggingframework.logging.LogLevel;
 
 public class _LocaleLoader {
     private static final LocaleProvider FALLBACK = new en_US().get();
 
-    @SuppressWarnings("deprecation")
-    @SneakyThrows
     public static LocaleProvider load(String locale) {
         LocaleProvider provider;
 
-        switch (locale.toUpperCase().replace('-', '_')) {
-            case "DA_DK":
-                provider = da_DK.class.newInstance().get();
-                break;
+        String[] parts = locale.replace('-', '_').split("_");
+        String fileToLoad = parts[0].toLowerCase() + "_" + parts[1].toUpperCase();
 
-            case "DE_DE":
-                provider = de_DE.class.newInstance().get();
-                break;
+        if (fileToLoad.equals("en_US")) {
+            return FALLBACK;
+        }
 
-            case "EN_US":
-                return FALLBACK;
-
-            case "ES_ES":
-                provider = es_ES.class.newInstance().get();
-                break;
-
-            case "FR_FR":
-                provider = fr_FR.class.newInstance().get();
-                break;
-
-            case "ID_ID":
-                provider = id_ID.class.newInstance().get();
-                break;
-
-            case "RU_RU":
-                provider = ru_RU.class.newInstance().get();
-                break;
-
-            case "TR_TR":
-                provider = tr_TR.class.newInstance().get();
-                break;
-
-            default:
-                FastLogger.logStatic(LogLevel.WARNING, "Unable to find locale provider for: %s", locale);
-                return FALLBACK;
+        // Load using reflection.
+        try {
+            @SuppressWarnings("unchecked")
+            Class<Supplier<LocaleProvider>> providerClass = (Class<Supplier<LocaleProvider>>) Class.forName("co.casterlabs.caffeinated.app.locale." + fileToLoad);
+            provider = providerClass.getConstructor().newInstance().get();
+        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
+            e.printStackTrace();
+            return FALLBACK;
         }
 
         return new LocaleProvider() {
